# ccc

./: .gitignore  Cargo.toml  README.md  test_compile.rs  tinyvim-windows.cmd
.github/workflows/: build.yml
src/: ai.rs  buffer.rs  builder.rs  editor.rs  main.rs  ui.rs
