[package]
name = "tinyvim"
version = "0.2.2"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
ureq = "3"
zip = "2"
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lzma-rs = "0.3"
tar = { version = "0.4", default-features = false }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "processenv", "winbase", "wincon"] }
